# Lab2.17

./: README.md  pyproject.toml
data/: data.json  data_hard.json  data_ind.json
prog/: ind.py  ind_hard.py  prim.py
