[tool.poetry]
name = "lab2.17"
version = "0.1.1"
description = ""
authors = ["magdaevdalambek <you@example.com>"]
license = "MIT LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
jsonschema = "^4.21.1"
click = "^8.1.7"
pre-commit = "^3.7.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
